# Crypto-Trading-MCP

./: .env.example  .gitignore  CHANGELOG.md  CONSTANTS_MIGRATION_SUMMARY.md  CONTRIBUTING.md  DEPENDENCY_CLEANUP_SUMMARY.md  Dockerfile  Dockerfile.http  ERROR_HANDLING_STANDARDIZATION.md  README.md  SECURITY_FIX_SUMMARY.md  SSL_SECURITY_FIX.md  docker-compose.http.yml  docker-compose.yml  pyproject.toml  requirements.txt  test-n8n-integration.sh  test_binance_price.py  test_constants.py  test_error_handling.py  test_error_handling_simple.py  test_ssl_security.py  validate-config.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  test.yml
.qlty/: qlty.toml
client/: config.yaml  crypto_trader.py  mcp_manager.py
docs/: API_REFERENCE.md  QUICK_START.md
http-bridge/: .env.example  README.md  config.js  json-rpc-handler.js  mcp-bridge.js  package-lock.json  package.json  server.js
http-bridge/tests/: validate.js
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: .gitkeep
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: prometheus.yml
nginx/: nginx.conf
nginx/ssl/: README.md
scripts/: init-mongo.js  start.sh  validate-config.py
servers/binance-mcp/: __init__.py  main.py
servers/crypto-ai-mcp/: __init__.py  main.py
servers/crypto-news-mcp/: __init__.py  main.py
servers/crypto-risk-mcp/: __init__.py  main.py
servers/crypto-social-mcp/: __init__.py  main.py
servers/crypto-technical-mcp/: __init__.py  main.py
shared/: constants.py  exceptions.py  shared_types.py  utils.py
tests/: test-n8n-integration.sh  test_servers_validation.py  test_system_integration.py
